force-app/main/UtilityComponents/nuviAIANDSupportANDTheme/nuvitekCustomThemeLayoutAndAccess/objects/NuvitekAccessRequest__c/NuvitekAccessRequest__c.object-meta.xml
<CustomObject>
    <description
  >Tracks user requests for access to various applications</description>
    <label>Nuvitek Access Request</label>
    <nameField>
        <displayFormat>AR-{0000}</displayFormat>
        <label>Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Nuvitek Access Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>