force-app/main/UtilityComponents/nuviAIANDSupportANDTheme/nuvitekCustomThemeLayoutAndAccess/objects/NuvitekAccessRequest__c/fields/AccessType__c.field-meta.xml
<CustomField>
    <fullName>AccessType__c</fullName>
    <description
  >The type of access being requested (Admin, User, etc.)</description>
    <inlineHelpText>The role/level of access being requested</inlineHelpText>
    <label>Access Type</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>