force-app/main/UtilityComponents/nuviAIANDSupportANDTheme/nuvitekCustomThemeLayoutAndAccess/objects/NuvitekAccessRequest__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <description>The application for which access is being requested</description>
    <inlineHelpText>Name of the application for which access is being requested</inlineHelpText>
    <label>Application</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>