force-app/main/UtilityComponents/nuviAIANDSupportANDTheme/nuvitekCustomThemeLayoutAndAccess/objects/NuvitekAccessRequest__c/fields/Justification__c.field-meta.xml
<CustomField>
    <fullName>Justification__c</fullName>
    <description>Reason provided by the requester for needing this access</description>
    <inlineHelpText>Explain why you need access to this application</inlineHelpText>
    <label>Justification</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>