force-app/main/UtilityComponents/nuviAIANDSupportANDTheme/nuvitekCustomThemeLayoutAndAccess/objects/NuvitekAccessRequest__c/fields/Requester__c.field-meta.xml
<CustomField>
    <fullName>Requester__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User who requested access</description>
    <label>Requester</label>
    <referenceTo>User</referenceTo>
    <relationshipName>AccessRequests</relationshipName>
    <type>Lookup</type>
</CustomField>